fix page action buttons line wrap in admin

--- a/backend/app/assets/stylesheets/admin/shared/_layout.scss
+++ b/backend/app/assets/stylesheets/admin/shared/_layout.scss
@@ -75,6 +75,7 @@
   }
   .page-actions {
     text-align: right;
+    line-height: 38px;
     form {
       display: inline-block;
     }
